--- a/todolist-front/src/app/app.component.html
+++ b/todolist-front/src/app/app.component.html
@@ -1,5 +1,5 @@
 ﻿<!-- main app container -->
-<div>
+<div style="height:100%">
     <div style="width:100%; height:100%; padding-left: 0.9em">
         <div class="row" style="width:100%; height: 100%">
             <div style="width:100%; height:100%">
