Ajout de tâches/Remove

--- a/todolist-front/src/app/login/login.component.scss
+++ b/todolist-front/src/app/login/login.component.scss
@@ -11,8 +11,8 @@
     background: linear-gradient(to right, #0052D4, #65C7F7, #9CECFB);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   }
-  
-  .card-signin {
+
+  .card .card-signin {
     border: 0;
     border-radius: 1rem;
     box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
