--- a/todolist-front/src/app/home/home.component.html
+++ b/todolist-front/src/app/home/home.component.html
@@ -1,6 +1,10 @@
-﻿<body>
+﻿<head>
+    <link href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+</head>
 
-<!-- FAIRE DEUX COMPOSANTS UN SI ADMIN L'AUTRE SI PAS ADMIN ET AFFICHER L'UN OU L'AUTRE EN FONCTION DE SI IL EST ADMIN OU PAS :
+<body>
+
+    <!-- FAIRE DEUX COMPOSANTS UN SI ADMIN L'AUTRE SI PAS ADMIN ET AFFICHER L'UN OU L'AUTRE EN FONCTION DE SI IL EST ADMIN OU PAS :
     ADMIN PEUT : ADD/MODIFIER/DELETE/BAN USERS ET PAREIL POUR LES TASKS
     USER PEUT : ADD/MODIFIER/DELETE TASKS 
     Mettre en forme de cards la todolist 
@@ -8,16 +12,33 @@
 
     Thomas ==> Regarder pour containairiser le bordel -->
 
-    <h1>Hi {{currentUser.firstName}}!</h1>
-    <p>You're logged in with Angular 6!!</p>
-    <h3>All registered users:</h3>
-    <ul>
-        <li *ngFor="let user of users">
-            {{user.username}} - ({{user.firstname}} {{user.lastname}}) -
-            <a (click)="deleteUser(user.id)" class="text-danger">Delete</a>
-        </li>
-    </ul>
-    <p>
-        <a [routerLink]="['/login']">Logout</a>
-    </p>
+    <h1>My Todolist</h1>
+    <div class="d-flex justify-content-between">
+    <div class="card card-signin my-5">
+        <div class="card-body">
+            <h5 class="card-title text-center">My scheduled tasks</h5>
+            <div class="form-signin">
+                <app-home-user></app-home-user>
+
+                <div class="form-label-group">
+                    <p>
+                        <a [routerLink]="['/login']">Logout</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card card-signin-add my-5">
+            <div class="card-body">
+                <h5 class="card-title text-center">Add a task :</h5>
+                <div class="form-signin">
+                    <div class="form-label-group">
+                        <input #task type="task" id="inputTask" formControlName="task" class="form-control" placeholder="Add a task...">
+                        <label for="inputTask">Add a task to your To Do list :</label>
+                        <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit" (click)="addTask(task.value)"><i class="fa fa-plus"></i><a style="margin-left: 10px">Add</a></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
